Initial commit - Zara Selenium automation (final web+api) v.3